--- a/package.json
+++ b/package.json
@@ -1,37 +1,39 @@
 {
-  "name": "typescript-graphql-nexus",
-  "license": "MIT",
-  "scripts": {
-    "dev": "ts-node-dev --no-notify --respawn --transpile-only src/server",
-    "start": "node dist/server",
-    "clean": "rm -rf dist",
-    "build": "npm -s run clean && npm -s run generate && tsc",
-    "generate": "npm -s run generate:prisma && npm -s run generate:nexus",
-    "generate:prisma": "prisma generate",
-    "generate:nexus": "ts-node --transpile-only src/schema"
-  },
-  "prettier": {
-    "semi": false,
-    "singleQuote": true,
-    "trailingComma": "all"
-  },
-  "dependencies": {
-    "@apollo/server": "4.5.0",
-    "@prisma/client": "4.13.0",
-    "graphql": "16.6.0",
-    "graphql-scalars": "1.21.3",
-    "nexus": "1.3.0"
-  },
-  "devDependencies": {
-    "@tsconfig/node18": "^2.0.1",
-    "@types/node": "18.16.3",
-    "prettier": "^2.8.8",
-    "prisma": "4.13.0",
-    "ts-node": "10.9.1",
-    "ts-node-dev": "2.0.0",
-    "typescript": "4.9.5"
-  },
-  "prisma": {
-    "seed": "ts-node --transpile-only prisma/seed.ts"
-  }
+    "name": "qruid-centralised",
+    "version": "1.0.0",
+    "description": "Qruid management",
+    "main": "src/server.ts",
+    "repository": "git@github.com:lexraijmakers/qruid-centralised.git",
+    "author": "lexraijmakers <lex.raijmakers@gmail.com>",
+    "license": "MIT",
+    "private": false,
+    "scripts": {
+        "dev": "ts-node-dev --no-notify --respawn --transpile-only src/server",
+        "start": "node dist/server",
+        "clean": "rm -rf dist",
+        "build": "npm -s run clean && npm -s run generate && tsc",
+        "generate": "npm -s run generate:prisma && npm -s run generate:nexus",
+        "generate:prisma": "prisma generate",
+        "generate:nexus": "ts-node --transpile-only src/schema"
+    },
+    "dependencies": {
+        "@apollo/server": "4.5.0",
+        "@prisma/client": "4.13.0",
+        "graphql": "16.6.0",
+        "graphql-scalars": "1.21.3",
+        "nexus": "1.3.0",
+        "nexus-prisma": "^1.0.7"
+    },
+    "devDependencies": {
+        "@tsconfig/node18": "^2.0.1",
+        "@types/node": "18.16.3",
+        "prettier": "^2.8.8",
+        "prisma": "4.13.0",
+        "ts-node": "10.9.1",
+        "ts-node-dev": "2.0.0",
+        "typescript": "4.9.5"
+    },
+    "prisma": {
+        "seed": "ts-node --transpile-only prisma/seed.ts"
+    }
 }
