--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
-  "compilerOptions": {
-    "outDir": "dist",
-    "rootDir": "src",
-    "esModuleInterop": true,
-    "lib": ["esnext"],
-    "strict": true,
-  },
-  "include": ["src/**/*"]
+    "compilerOptions": {
+        "outDir": "dist",
+        "rootDir": "src",
+        "esModuleInterop": true,
+        "lib": ["esnext"],
+        "strict": true
+    },
+    "include": ["src/**/*"]
 }
 
 // {
