--- a/package.json
+++ b/package.json
@@ -14,23 +14,24 @@
         "build": "npm -s run clean && npm -s run generate && tsc",
         "generate": "npm -s run generate:prisma && npm -s run generate:nexus",
         "generate:prisma": "prisma generate",
-        "generate:nexus": "ts-node --transpile-only src/schema"
+        "generate:nexus": "ts-node --transpile-only src/schema",
+        "prisma:migrate": "npx prisma migrate dev --name init"
     },
     "dependencies": {
-        "@apollo/server": "4.5.0",
-        "@prisma/client": "4.13.0",
-        "graphql": "16.6.0",
-        "graphql-scalars": "1.21.3",
-        "nexus": "1.3.0",
+        "@apollo/server": "^4.7.1",
+        "@prisma/client": "^4.14.1",
+        "graphql": "^16.6.0",
+        "graphql-scalars": "^1.22.0",
+        "nexus": "^1.3.0",
         "nexus-prisma": "^1.0.7"
     },
     "devDependencies": {
         "@tsconfig/node18": "^2.0.1",
-        "@types/node": "18.16.3",
+        "@types/node": "^18.16.3",
         "prettier": "^2.8.8",
-        "prisma": "4.13.0",
-        "ts-node": "10.9.1",
-        "ts-node-dev": "2.0.0",
+        "prisma": "^4.14.1",
+        "ts-node": "^10.9.1",
+        "ts-node-dev": "^2.0.0",
         "typescript": "4.9.5"
     },
     "prisma": {
