--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
         "generate:prisma": "prisma generate",
         "generate:nexus": "ts-node --transpile-only src/schema",
         "prisma:migrate": "npx prisma migrate dev --name init",
-        "prisma:deploy": "npx prisma migrate deploy"
+        "prisma:deploy": "npx prisma migrate deploy",
+        "prisma:reset": "npx prisma migrate reset"
     },
     "dependencies": {
         "@apollo/server": "^4.7.1",
-        "@prisma/client": "^4.15.0",
+        "@prisma/client": "^4.14.1",
         "graphql": "^16.6.0",
         "graphql-scalars": "^1.22.0",
         "nexus": "^1.3.0",
@@ -30,7 +31,7 @@
         "@tsconfig/node18": "^2.0.1",
         "@types/node": "^18.16.3",
         "prettier": "^2.8.8",
-        "prisma": "^4.15.0",
+        "prisma": "^4.14.1",
         "ts-node": "^10.9.1",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.0.4"
